two bugs appear on load page

--- a/index.html
+++ b/index.html
@@ -31,11 +31,22 @@
 
         <main>
             <section class="kenni-stats">
-                <div id="kenni-wins">Kenni defeated <span>0</span> bugs!</div>
-                <div id="kenni-hp">Kenni's Hp: <span>0</span></div>
+                <div id="kenni-wins">Kenni defeated <span id="win-number">0</span> bugs!</div>
+                <div id="kenni-hp">Kenni's Hp: <span>10</span></div>
                 <div id="kenni-img">
                     <img src="http://placekitten.com/200/200" />
                 </div>
+            </section>
+
+            <section class="bug-section">
+                <div id="add-new-bug">
+                    <form>
+                        <label>Add a new bug</label>
+                        <input type="text" />
+                        <button type="submit">add</button>
+                    </form>
+                </div>
+                <div class="bugs"></div>
             </section>
         </main>
     </body>
