form event listener is functional and adds new bugs

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
         <main>
             <section class="kenni-stats">
-                <div id="kenni-wins">Kenni defeated <span id="win-number">0</span> bugs!</div>
+                <div id="kenni-wins">Kenni defeated <span id="defeated-number">0</span> bugs!</div>
                 <div id="kenni-hp">Kenni's Hp: <span>10</span></div>
                 <div id="kenni-img">
                     <img src="http://placekitten.com/200/200" />
@@ -42,7 +42,7 @@
                 <div id="add-new-bug">
                     <form>
                         <label>Add a new bug</label>
-                        <input type="text" />
+                        <input name="bug-name" id="bug-name" type="text" />
                         <button type="submit">add</button>
                     </form>
                 </div>
