--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
             <section class="kenni-stats">
                 <div id="kenni-wins">Kenni defeated <span id="defeated-number">0</span> bugs!</div>
                 <div id="kenni-hp">Kenni's Hp: <span>10</span></div>
-                <div id="kenni-img">
-                    <img src="http://placekitten.com/200/200" />
+                <div class="kenni-img">
+                    <img id="kenni-img" src="http://placekitten.com/200/200" />
                 </div>
             </section>
 
