--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <div id="kenni-wins">Kenni defeated <span id="defeated-number">0</span> bugs!</div>
                 <div id="kenni-hp">Kenni's Hp: <span>10</span></div>
                 <div class="kenni-img">
-                    <img id="kenni-img" src="http://placekitten.com/200/200" />
+                    <img id="kenni-img" src="https://placekitten.com/200/200" />
                 </div>
             </section>
 
