no longer functions when kenni hp equals zero, bug emojis change on hp 0

--- a/index.html
+++ b/index.html
@@ -32,20 +32,19 @@
         <main>
             <section class="kenni-stats">
                 <div id="kenni-wins">Kenni defeated <span id="defeated-number">0</span> bugs!</div>
-                <div id="kenni-hp">Kenni's Hp: <span>10</span></div>
+                <div>Kenni's Hp: <span id="kenni-hp">10</span></div>
                 <div class="kenni-img">
                     <img id="kenni-img" src="https://placekitten.com/200/200" />
                 </div>
             </section>
 
             <section class="bug-section">
-                <div id="add-new-bug">
-                    <form>
-                        <label>Add a new bug</label>
-                        <input name="bug-name" id="bug-name" type="text" />
-                        <button type="submit">add</button>
-                    </form>
-                </div>
+                <form>
+                    <label>Add a new bug</label>
+                    <input name="bug-name" id="bug-name" type="text" />
+                    <button type="submit">add</button>
+                </form>
+
                 <div class="bugs"></div>
             </section>
         </main>
